fix: align main content

--- a/src/style.css
+++ b/src/style.css
@@ -9,6 +9,7 @@
     display: flex;
     flex-direction: column;
     max-width: 1040px;
+    margin: auto;
 }
 
 .textarea {
